Fix z-index issue with contact me card

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -52,6 +52,7 @@ button {
 input {
   -webkit-appearance: none;
   
+  background: white;
   border: 1px solid transparent;
   padding: 0 34.9px;
   height: 49px;
